fix edit profile student

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,11 @@
 
 <head>
   <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/LOGO.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>QUẢN LÝ KÍ TÚC XÁ</title>
+  <meta name="description" content="Hệ thống quản lý ký túc xá hiện đại" />
+  <meta name="theme-color" content="#4f46e5" />
+  <title>HỆ THỐNG QUẢN LÝ KÝ TÚC XÁ</title>
 </head>
 
 <body>
